# agentic-ai-workshop-evals

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/: __init__.py  agent.py  main.py  schemas.py  server.py  settings.py  support_data.py  tools.py
docs/: 00-setup.md  01-base-app.md  02-tracing.md  03-prompt-management.md  04-monitoring.md  05-dataset.md  06-experiments.md  07-prompt-iteration.md  08-wrap-up.md  README.md  checkpoints.md
docs/instructor/: 00-setup.md  01-base-app.md  02-tracing.md  03-prompt-management.md  04-monitoring.md  05-dataset.md  06-experiments.md  07-evaluation.md  08-wrap-up.md
docs/learner/: 00-setup.md  01-base-app.md  02-tracing.md  03-prompt-management.md  04-monitoring-fix-diff.html  04-monitoring.md  05-dataset.md  06-experiments.md  07-evaluation.md  07-prompt-iteration.md  08-wrap-up.md  README.md
scripts/: __init__.py  publish-prompt.ts  publish_prompt.py  run-dataset.ts  run_dataset.py  seed-dataset.ts  seed_dataset.py
src/client/: App.tsx  main.tsx  styles.css
src/client/styles/: colors_and_type.css  components.css
src/server/: env.ts  index.ts  load-env.ts  local-prompt.ts  prompt-manager.ts  support-agent.ts  tools.ts
