[project]
name = "langfuse-dad-it-support-workshop"
version = "0.1.0"
description = "Langfuse workshop backend for the Dad IT Support Agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "langfuse>=4.0.0",
  "openai>=2.11.0",
  "pydantic>=2.12.0",
  "python-dotenv>=1.2.0",
  "uvicorn[standard]>=0.38.0"
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
